--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
         <title>Angular with Webpack</title>
     </head>
     <body ng-app="app">
-        <h1>Angular + Webpack</h1>
+        <h1>Hello</h1>
         <script type="text/javascript" src="bundle.js"></script>
     </body>
 </html>
